fix: fixed spacing

--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -231,8 +231,8 @@ svg {
 		font-weight: 500;
 	}
 	img {
-		margin-top: -25vh;
-		margin-bottom: -50vh;
+		margin-top: -35vh;
+		margin-bottom: -60vh;
 		width: 200%;
 		pointer-events: none;
 	}
